--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ES2023"],
     "importHelpers": true,
     "module": "NodeNext",
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
@@ -12,6 +12,7 @@
     "declaration": true,
     "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
     "baseUrl": ".",
     "rootDir": ".",
     "allowJs": true,
