--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsa-toolbox",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "type": "module",
   "main": "dist/index.js",
@@ -41,5 +41,6 @@
     "typescript": "=5.6.2",
     "typescript-eslint": "=8.7.0",
     "vitest": "=2.0.5"
-  }
+  },
+  "dependencies": {}
 }
