--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dsa-toolbox",
-  "version": "0.0.5",
-  "description": "",
+  "version": "0.0.7",
+  "description": "A powerful toolkit for data structures and algorithms in TypeScript, designed for optimal performance and versatility. The toolkit provides implementations of various data structures and algorithms, with a focus on search and sort operations, caching, and probabilistic data structures.",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
     "README.md"
   ],
   "scripts": {
-    "build:tsc": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc",
     "start:dev": "nodemon --exec node --loader ts-node/esm ./benchmarks.ts -- --dev",
     "lint": "eslint --config ./eslint.config.mjs --cache-location ./.eslintcache \"./**/*.ts\" --cache",
     "lint:fix": "eslint --config ./eslint.config.mjs --cache-location ./.eslintcache \"./**/*.ts\" --cache --fix",
