[FEATURE]: unit tests and benchmarks

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsa-toolbox",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "A powerful toolkit for data structures and algorithms in TypeScript, designed for optimal performance and versatility. The toolkit provides implementations of various data structures and algorithms, with a focus on search and sort operations, caching, and probabilistic data structures.",
   "type": "module",
   "main": "dist/index.js",
@@ -11,13 +11,15 @@
   ],
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "start:dev": "nodemon --exec node --loader ts-node/esm ./benchmarks.ts -- --dev",
+    "bench-ds": "nodemon --exec node --loader ts-node/esm ./benchmark-ds.ts -- --dev",
+    "bench-algo": "nodemon --exec node --loader ts-node/esm ./benchmark-algo.ts -- --dev",
     "lint": "eslint --config ./eslint.config.mjs --cache-location ./.eslintcache \"./**/*.ts\" --cache",
     "lint:fix": "eslint --config ./eslint.config.mjs --cache-location ./.eslintcache \"./**/*.ts\" --cache --fix",
     "format": "prettier --write ./src",
     "test": "vitest --coverage --watch false",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
+    "update-docs": "rimraf ./docs && typedoc",
     "prepare": "husky"
   },
   "keywords": [],
@@ -38,9 +40,10 @@
     "nodemon": "=2.0.19",
     "rimraf": "=6.0.1",
     "ts-node": "=10.9.2",
+    "typedoc": "=0.26.11",
+    "typedoc-github-theme": "=0.1.2",
     "typescript": "=5.6.2",
     "typescript-eslint": "=8.7.0",
     "vitest": "=2.0.5"
-  },
-  "dependencies": {}
+  }
 }
