--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,6 +45,7 @@ jobs:
         
   # Deploy documentation on github-pages
   deploy:
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
