--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "baseUrl": ".",
     "allowJs": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+  },
+  "ts-node": {
+    "transpileOnly": true
   },
   "include": ["src/**/*.ts"],
   "exclude": [
